added alt:an image of a dog

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -11,6 +11,6 @@
     
     <a href="pages/about.html">About</a>
 
-    <img src="./img/dog.jpg" alt="" height="200px" width="200px">
+    <img src="./img/dog.jpg" alt="an image of a dog" height="200px" width="200px">
 </body>
 </html>
